<resources>
    <string name="app_name">Monopolis</string>
    <string name="connecting_to_server">Connecting to server...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Main menu-->
    <string name="button_create_game">Create Game</string>
    <string name="button_join_game">Join Game</string>
    <string name="button_settings">Settings</string>
    <string name="button_send">Send</string>
    <!--Pregame-->
    <string name="label_players">Players</string>
    <string name="button_start_game">Start</string>
    <string name="button_continue">Continue</string>
    <string name="join">Join</string>
    <!--Game buttons-->
    <string name="roll_dice">Roll dice</string>
    <string name="end_turn">End turn</string>
    <string name="trade">Trade</string>
    <string name="property_management">Property management</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="purchase_property">Purchase property</string>
    <string name="use_jail_card">Use jail card</string>
    <string name="pay_bail">Pay bail</string>
    <string name="hotel">Hotel</string>
    <string name="space_houses">houses</string>
    <string name="no_houses">No houses</string>
    <string name="mortgaged">Mortgaged</string>
</resources>
